feat:1、重新编译“影像图制图”插件；2、添加启动限制次数

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -63,7 +63,7 @@ endif()
 
 add_subdirectory(analysis_ready_data_toolbox)
 #add_subdirectory(bin_moving_target_mapping_layout_vectorization)
-#add_subdirectory(geoextractandprocess)
+add_subdirectory(geoextractandprocess)
 #add_subdirectory(odata_format_conversion_toolbox)
 #add_subdirectory(planet_data_products_toolbox)
 #add_subdirectory(vector_data_check_odata_toolbox)
