--- a/src/starmap_src/CMakeLists.txt
+++ b/src/starmap_src/CMakeLists.txt
@@ -1,7 +1,7 @@
 #add_subdirectory(base_vector_format_conversion)
 #add_subdirectory(base_coordinate_transformation)
-#add_subdirectory(base_geoextractandprocess)
-#add_subdirectory(base_project)
+add_subdirectory(base_geoextractandprocess)
+add_subdirectory(base_project)
 #add_subdirectory(base_vector_feature_matching)
 #add_subdirectory(DLHJ_TOOLS)
 #add_subdirectory(base_point_feature_hierarchical_processing)
