feat:1、修改SIPMacros.cmake以修复CMake中的警告信息；2、修改顶层CMakeLists.txt文件以包含Qt6中的WebEngineWidgets组件；3、修改plugin_llama_webui目标的链接库对象名称，从而区分Qt5/Qt6，因为在QGIS中能够显示plugin_llama_webui目标需要更新的Chrome内核，Qt WebEngine基于Google 的Chromium项目。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -625,7 +625,7 @@ if(WITH_CORE)
   set (WITH_QTWEBENGINE FALSE CACHE BOOL "Enable QtWebEngine support")
   if (WITH_QTWEBENGINE)
     if(BUILD_WITH_QT6)
-      find_package(${QT_VERSION_BASE} COMPONENTS WebEngineCore REQUIRED)
+      find_package(${QT_VERSION_BASE} COMPONENTS WebEngineCore WebEngineWidgets REQUIRED)
     else()
       # QWebEnginePage is only available in widgets module in Qt5
       find_package(${QT_VERSION_BASE} COMPONENTS WebEngineCore WebEngineWidgets REQUIRED)
