feat:重新组织代码例如使用UI而不是代码构建用户界面、命名规范性等
1、用产品的角度出发有些内容是不需要的/设计冗余，这部分内容需要修改，例如重新加载等等
2、需要修改代码将用户记录保存下来

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -10,7 +10,9 @@ add_subdirectory(topology)
 add_subdirectory(geometry_checker)
 
 if (WITH_QTWEBENGINE)
-  add_subdirectory(llama_webui)
+  add_subdirectory(qcopilots)
+else()
+  message(STATUS "Skipping QCopilots plugin,if you want to enable it, please enable WITH_QTWEBENGINE option which will build Qt with WebEngineWidgets support")
 endif()
 
 if (WITH_SPATIALITE)
