--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -9,6 +9,12 @@ set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${QGIS_OUTPUT_DIRECTORY}/${QGIS_PLUGIN_SUBDI
 add_subdirectory(topology)
 add_subdirectory(geometry_checker)
 
+if (WITH_QTWEBENGINE)
+  add_subdirectory(qcopilots)
+else()
+  message(STATUS "Skipping QCopilots plugin,if you want to enable it, please enable WITH_QTWEBENGINE option which will build Qt with WebEngineWidgets support")
+endif()
+
 if (WITH_SPATIALITE)
   add_subdirectory(offline_editing)
 endif()
