--- a/python/plugins/processing/CMakeLists.txt
+++ b/python/plugins/processing/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(core)
 add_subdirectory(gui)
 add_subdirectory(images)
 add_subdirectory(modeler)
+add_subdirectory(mcpserver)
 add_subdirectory(script)
 add_subdirectory(tests)
 add_subdirectory(tools)
